# chad-fleet

./: .gitignore  DESIGN.md  LICENSE  README.md  launch.sh  pyproject.toml
.claude/agent-memory/chad-twin/: MEMORY.md  chad-admiral-not-in-uv-workspace.md  hub-capability-pattern.md  hub-contracts-pattern.md  hub-deploy-packaging.md
apps/chad-admiral/: README.md
apps/chad-admiral/.claude/agent-memory/chad-twin/: MEMORY.md  feedback_chad_fleet_escalation_gotchas.md  project_chad_fleet_admiral.md
apps/chad-admiral/.goose-runtime/: config
apps/chad-admiral/.goose-runtime/data/goose/: projects.json
apps/chad-admiral/.goose-runtime/data/goose/apps/: clock.html
apps/chad-admiral/.goose-runtime/data/goose/sessions/: sessions.db-shm  sessions.db-wal
apps/chad-admiral/src/chad_admiral/: __init__.py  admiral.py  authority.py  captain.py  discovery.py  dispatch.py  intake.py  server.py  types.py
apps/chad-captain/: CAPTAIN_DASHBOARD_BRIEF.md  PLAN.md  README.md  pyproject.toml
apps/chad-captain-scaffold/: pyproject.toml
apps/chad-captain-scaffold/src/chad_captain_scaffold/: __init__.py  artifacts.py  cli.py
apps/chad-captain-scaffold/tests/: test_artifacts.py
apps/chad-captain/goose-runtime/: .gitignore  README.md
apps/chad-captain/goose-runtime/config/goose/: config.yaml
apps/chad-captain/runbooks/: T1-spark-chapter-audit.md  T3-marketing-discovery.md  T4-es-bots-bootstrap.md
apps/chad-captain/scripts/: resume_after_engine_merge.sh  soak_test.py
apps/chad-captain/seeds/: T3-marketing-feature-backlog.json  T4-es-bots-feature-backlog.json
apps/chad-captain/src/chad_captain/: __init__.py  api.py  apps_registry.py  cli.py  config.py  daemon.py  fixture_validator.py  goose_runner.py  launchd.py  llm.py  merge_facilitator.py  protocol.py  replanner.py  runner.py  scheduler.py  scorecard.py  server.py  summary.py  validator.py
apps/chad-captain/src/chad_captain/extras/: __init__.py  author_toolkit.py  captain_self.py  spark.py  spark_grades.py  t3_marketing.py
apps/chad-captain/src/chad_captain/research/: __init__.py  ideation.py  local.py  synthesize.py  web.py
apps/chad-captain/src/chad_captain/validators/: __init__.py  t3_marketing.py
apps/chad-captain/tests/: conftest.py  test_api.py  test_apps_registry.py  test_canary.py  test_config.py  test_daemon.py  test_extras.py  test_fixture_validator.py  test_goose_runner.py  test_ideation.py  test_merge_facilitator.py  test_protocol.py  test_replanner.py  test_research_local.py  test_research_synthesize.py  test_research_web.py  test_runner.py  test_scheduler.py  test_scorecard.py  test_server.py  test_summary.py  test_t3_marketing_validator.py  test_tracer_e2e.py  test_validator.py
apps/chad-dashboard/: README.md  middleware.ts  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  vitest.config.ts
apps/chad-dashboard/app/: ChatPanel.tsx  layout.tsx  page.tsx
apps/chad-dashboard/app/api/admiral/: route.ts
apps/chad-dashboard/app/api/inbox/: route.ts
apps/chad-dashboard/app/api/state/: route.ts
apps/chad-dashboard/app/api/views/: route.ts
apps/chad-dashboard/app/apps/: page.tsx
apps/chad-dashboard/app/apps/[id]/: page.tsx
apps/chad-dashboard/app/calendar/: page.tsx
apps/chad-dashboard/app/captain/: CaptainStatus.tsx  captain.css  page.tsx
apps/chad-dashboard/app/captain/[appId]/: L2Client.tsx  page.tsx
apps/chad-dashboard/app/captain/components/: AppRow.tsx  BridgeControls.tsx  Chips.tsx
apps/chad-dashboard/app/captain/lib/: captainFormat.ts
apps/chad-dashboard/app/email/: page.tsx
apps/chad-dashboard/app/inbox/: page.tsx
apps/chad-dashboard/app/login/: page.tsx
apps/chad-dashboard/app/sessions/: page.tsx
apps/chad-dashboard/app/tools/: page.tsx
apps/chad-dashboard/app/views/: page.tsx
apps/chad-dashboard/app/views/[id]/: ViewClient.tsx  page.tsx
apps/chad-dashboard/features/auth/: gate.ts  hash-password.mjs  login-ui.tsx  password.ts  session.ts
apps/chad-dashboard/features/calendar/: client.ts  ui.tsx
apps/chad-dashboard/features/chat/: client.ts  server.ts  ui.tsx
apps/chad-dashboard/features/email/: client.ts  ui.tsx
apps/chad-dashboard/features/sessions/: client.ts  ui.tsx
apps/chad-dashboard/features/tools/: client.ts  ui.tsx
apps/chad-dashboard/lib/: api.ts  captainTypes.ts  config.ts  types.ts  views.ts
apps/chad-dashboard/tests/: api.test.ts  auth.test.ts  captain-pages.test.tsx  inbox-route.test.ts  pages.test.tsx  views-api.test.ts  views-pages.test.tsx
deploy/: .dockerignore  .env.example  Dockerfile.admiral  Dockerfile.aggregator  Dockerfile.dashboard  Dockerfile.genui  Dockerfile.view-registry  README.md  docker-compose.yml
docs/: CLAUDE_DESIGN_HANDOFF.md  FLEET_PROCESS.md  HUB_ARCHITECTURE.md
scripts/: bws-resolve.sh  calendar_action_probe.py  calendar_probe.py  captain_dogfood.py  check_boundaries.py  dashboard_probe.py  dogfood_matrix.py  email_action_probe.py  email_mcp_wire_probe.py  email_probe.py  install-launchagent.sh  launch-with-secrets.sh  llm_traffic_dogfood.py  run-service.sh  saved_views_e2e.py  services.sh  smtp_validate_probe.py
(+7 files in other folders)
