[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chad-fleet"
version = "0.0.0"
description = "Monorepo root — not a publishable package"
requires-python = ">=3.11"

# Monorepo root has no Python package of its own — hatchling defaults to
# scanning for one and fails. Tell hatch to skip wheel selection so
# `uv sync` doesn't try to build an editable wheel for the root.
[tool.hatch.build.targets.wheel]
bypass-selection = true

# uv workspace: include all Python packages under packages/ and apps/
[tool.uv.workspace]
members = [
    "packages/tracked-app-registry",
    "packages/voice-drafter",
    "packages/state-aggregator",
    "packages/notifier-hub/core",
    "packages/notifier-hub/adapters/dashboard-inbox",
    "packages/notifier-hub/adapters/ntfy",
    "packages/notifier-hub/adapters/email",
    "packages/captain-core",
    "packages/week-intake",
    "apps/chad-captain",
    "apps/chad-captain-scaffold",
]
