[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chad-captain"
version = "0.1.0"
description = "Captain app wiring captain-core to the fleet (closed source)"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.5",
    "fastmcp>=0.2",
    "captain-core",
    "state-aggregator",
    "notifier-hub-core",
    "notifier-hub-dashboard-inbox",
    "notifier-hub-ntfy",
]

[tool.uv.sources]
captain-core = { path = "../../packages/captain-core", editable = true }
state-aggregator = { path = "../../packages/state-aggregator", editable = true }
notifier-hub-core = { path = "../../packages/notifier-hub/core", editable = true }
notifier-hub-dashboard-inbox = { path = "../../packages/notifier-hub/adapters/dashboard-inbox", editable = true }
notifier-hub-ntfy = { path = "../../packages/notifier-hub/adapters/ntfy", editable = true }

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[project.scripts]
chad-captain = "chad_captain.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/chad_captain"]
