[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chad-captain"
version = "0.1.0"
description = "Captain app wiring captain-core to the fleet (closed source)"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.5",
    "fastmcp>=0.2",
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "httpx>=0.27",
    "captain-core",
    "state-aggregator",
    "notifier-hub-core",
    "notifier-hub-dashboard-inbox",
    "notifier-hub-ntfy",
]

[tool.uv.sources]
captain-core = { workspace = true }
state-aggregator = { workspace = true }
notifier-hub-core = { workspace = true }
notifier-hub-dashboard-inbox = { workspace = true }
notifier-hub-ntfy = { workspace = true }

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[project.scripts]
chad-captain = "chad_captain.cli:main"
chad-captain-api = "chad_captain.api:main"

[tool.hatch.build.targets.wheel]
packages = ["src/chad_captain"]
