[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chad-captain"
version = "0.1.0"
description = "Captain app wiring captain-core to the fleet (closed source)"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.5",
    "fastmcp>=0.2",
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "httpx>=0.27",
    "captain-core",
    "state-aggregator",
    "notifier-hub-core",
    "notifier-hub-dashboard-inbox",
    "notifier-hub-ntfy",
]

[tool.uv.sources]
captain-core = { workspace = true }
state-aggregator = { workspace = true }
notifier-hub-core = { workspace = true }
notifier-hub-dashboard-inbox = { workspace = true }
notifier-hub-ntfy = { workspace = true }

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[project.scripts]
chad-captain = "chad_captain.cli:main"
chad-captain-api = "chad_captain.api:main"
# PR2 R3-HIGH-1 fix: first-class console script for the goose-runner.
# Without this, captains dispatched current_slice.json with no consumer
# and stalled until the watchdog fired ~30min later.
chad-captain-goose-runner = "chad_captain.goose_runner:main"

[tool.hatch.build.targets.wheel]
packages = ["src/chad_captain"]
